--- a/index.html
+++ b/index.html
@@ -6,9 +6,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment3</title>
+    <!-- bootstrap cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+
 </head>
 
-<body>
+<body style="font-family: 'Merriweather', serif;">
+    <!-- header start -->
+    <header class="container">
+        <h4 class="mt-3 ms-5">
+            Historical Convention Center
+        </h4>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/banner.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 class="">The perfect life partner for a happy life</h2>
+                        <p class="">Marriage, also called matrimony or wedlock, is a culturally and often
+                            legally recognized
+                            union between people called spouses.</p>
+                        <a href="https://www.muslima.com/" target="_block"><button type="button"
+                                class="btn btn-light text-primary fw-bold">Book Now</button></a>
+                    </div>
+
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slider2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 class="text-primary">The perfect life partner for a happy life</h2>
+                        <p class="text-primary">Marriage, also called matrimony or wedlock, is a culturally and often
+                            legally recognized
+                            union between people called spouses.</p>
+                        <a href="https://www.muslima.com/" target="_block"><button type="button"
+                                class="btn btn-light text-primary fw-bold">Book Now</button></a>
+                    </div>
+
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slider1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 class="text-success">The perfect life partner for a happy life</h2>
+                        <p class="text-success">Marriage, also called matrimony or wedlock, is a culturally and often
+                            legally recognized
+                            union between people called spouses.</p>
+                        <a href="https://www.muslima.com/" target="_block"><button type="button"
+                                class="btn btn-light text-success fw-bold">Book Now</button></a>
+                    </div>
+
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+
+        </div>
+    </header>
+
+
+
+
+
+
+
+
+    <!-- bootstrap script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
 
