--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-
+    <!-- font awasome -->
+    <script src="https://kit.fontawesome.com/fb29cff4b7.js" crossorigin="anonymous"></script>
 </head>
 
 <body style="font-family: 'Merriweather', serif;">
@@ -22,7 +23,7 @@
         <h4 class="mt-3 ms-5">
             Historical Convention Center
         </h4>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -31,40 +32,42 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/banner.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-inner container">
+                <div class="carousel-item active  container  ">
+                    <div class=" "><img src="images/banner.png" class="  d-block w-100 " style="height: 450px;"
+                            alt="...">
+                    </div>
+                    <div class="carousel-caption mt-5 pt-5  d-md-block   ">
                         <h2 class="">The perfect life partner for a happy life</h2>
                         <p class="">Marriage, also called matrimony or wedlock, is a culturally and often
                             legally recognized
                             union between people called spouses.</p>
                         <a href="https://www.muslima.com/" target="_block"><button type="button"
-                                class="btn btn-light text-primary fw-bold">Book Now</button></a>
+                                class="btn btn-light text-secondary bg-light.bg-gradient ">Book Now</button></a>
                     </div>
 
                 </div>
                 <div class="carousel-item">
-                    <img src="images/slider2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="images/slider2.jpg" class="d-block w-100" style="height:450px" alt="...">
+                    <div class="carousel-caption d-block d-md-block">
                         <h2 class="text-primary">The perfect life partner for a happy life</h2>
                         <p class="text-primary">Marriage, also called matrimony or wedlock, is a culturally and often
                             legally recognized
                             union between people called spouses.</p>
                         <a href="https://www.muslima.com/" target="_block"><button type="button"
-                                class="btn btn-light text-primary fw-bold">Book Now</button></a>
+                                class="btn btn-light text-white bg-primary">Book Now</button></a>
                     </div>
 
                 </div>
                 <div class="carousel-item">
-                    <img src="images/slider1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="images/slider1.jpg" class="d-block w-100" style="height:450px" alt="...">
+                    <div class="carousel-caption d-block d-md-block">
                         <h2 class="text-success">The perfect life partner for a happy life</h2>
                         <p class="text-success">Marriage, also called matrimony or wedlock, is a culturally and often
                             legally recognized
                             union between people called spouses.</p>
                         <a href="https://www.muslima.com/" target="_block"><button type="button"
-                                class="btn btn-light text-success fw-bold">Book Now</button></a>
+                                class="btn btn-light text-white bg-success">Book Now</button></a>
                     </div>
 
                 </div>
@@ -82,6 +85,110 @@
 
         </div>
     </header>
+    <!-- main start -->
+    <main class="container mx-auto  ">
+        <div class="my-5 d-flex justify-content-center ">
+            <h1>Our package</h1>
+        </div>
+        <div>
+            <div class="row row-cols-1 row-cols-md-4 g-4 mb-5 " style="height: 600px;">
+                <div class="col " style="margin-top: 60px; height: 500px;">
+                    <div class="card h-100 border-0">
+                        <div class="card-body">
+                            <h2> $300</h2>
+                            <h5 class="card-title">Business fair</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center ">
+                            <button class="px-4 py-2 rounded-pill" type="">
+                                Choose plan
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col " style="margin-top: 60px; height: 500px;">
+                    <div class="card h-100 border-0">
+                        <div class="card-body">
+                            <h2> $300</h2>
+                            <h5 class="card-title">Business fair</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center ">
+                            <button class="px-4 py-2 rounded-pill" type="">
+                                Choose plan
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col position-relative  " style=" height: 500px;">
+
+                    <div class="card  border-0 bg-primary pb-5   "
+                        style="border-radius: 15px; height: 550px;box-shadow:0px 2px 2px 2px rgba(4, 4, 250, 0.938); ">
+
+                        <span
+                            class="position-absolute top-0  translate-middle badge rounded-pill bg-secondary bg-danger"
+                            style="margin-left: 80%;">Hot
+                        </span>
+
+
+
+                        <div class="card-body">
+                            <h2 class="text-white"> $300</h2>
+                            <h5 class="card-title text-white">Business fair</h5>
+                            <p class="card-text text-white">This is a wider card with supporting text below as a natural
+                                lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="text-white"> limited space acceess</p>
+                            <p class="text-white"> limited space acceess</p>
+                            <p class="text-white"> limited space acceess</p>
+                            <p class="text-white"> limited space acceess</p>
+                            <p class="text-white"> limited space acceess</p>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center text-white ">
+                            <button class="px-4 py-2 rounded-pill" type="">
+                                Choose plan
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col  " style="margin-top: 60px; height: 500px; ">
+                    <div class="card h-100 border-0 ">
+                        <div class="card-body">
+                            <h2> $300</h2>
+                            <h5 class="card-title">Business fair</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                            <p> limited space acceess</p>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center ">
+                            <button class="px-4 py-2 rounded-pill" type="">
+                                Choose plan
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+    </main>
 
 
 
