--- a/index.html
+++ b/index.html
@@ -91,42 +91,41 @@
             <h1>Our package</h1>
         </div>
         <div>
-            <div class="row row-cols-1 row-cols-md-4 g-4 mb-5 " style="height: 600px;">
+            <div class="row row-cols-1 row-cols-md-4 g-3 mb-5 " style="height: 600px;">
                 <div class="col " style="margin-top: 60px; height: 500px;">
-                    <div class="card h-100 border-0">
+                    <div class="card  border-0">
                         <div class="card-body">
-                            <h2> $300</h2>
-                            <h5 class="card-title">Business fair</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
+                            <h2 class="fw-bold" style=" font-family:initial;"> $300</h2>
+                            <h5 class="card-title fw-bold">Business fair</h5>
+                            <p class="card-text"> For most businesses event like book fair. craft fair.</p>
+                            <p> <i style="color: #9098a0;" class="fas fa-check-circle"></i> limited space
+                                acceess</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Secuirty facility</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> event support</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Decoration design</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Per day bill</p>
                         </div>
-                        <div class="d-flex justify-content-center align-items-center ">
-                            <button class="px-4 py-2 rounded-pill" type="">
+                        <div class="d-flex justify-content-center align-items-center  ">
+                            <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
                                 Choose plan
                             </button>
                         </div>
                     </div>
                 </div>
                 <div class="col " style="margin-top: 60px; height: 500px;">
-                    <div class="card h-100 border-0">
+                    <div class="card  border-0">
                         <div class="card-body">
-                            <h2> $300</h2>
-                            <h5 class="card-title">Business fair</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
+                            <h2 class="fw-bold" style=" font-family:initial;"> $500</h2>
+                            <h5 class="card-title fw-bold">Wedding basic</h5>
+                            <p class="card-text">For weddings with basic plan and limited item</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Full space access </p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Food arrangement</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Mangement support </p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i>Decoration design </p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Billed ad shift</p>
                         </div>
-                        <div class="d-flex justify-content-center align-items-center ">
-                            <button class="px-4 py-2 rounded-pill" type="">
+                        <div class="d-flex justify-content-center align-items-center  ">
+                            <button class="px-4 py-2 rounded-pill border-0  text-primary" type="">
                                 Choose plan
                             </button>
                         </div>
@@ -135,7 +134,7 @@
                 <div class="col position-relative  " style=" height: 500px;">
 
                     <div class="card  border-0 bg-primary pb-5   "
-                        style="border-radius: 15px; height: 550px;box-shadow:0px 2px 2px 2px rgba(4, 4, 250, 0.938); ">
+                        style="border-radius: 15px; height: 470px;box-shadow:0px 34px 22px 5px rgba(153, 189, 230, 0.938) ">
 
                         <span
                             class="position-absolute top-0  translate-middle badge rounded-pill bg-secondary bg-danger"
@@ -145,39 +144,42 @@
 
 
                         <div class="card-body">
-                            <h2 class="text-white"> $300</h2>
-                            <h5 class="card-title text-white">Business fair</h5>
-                            <p class="card-text text-white">This is a wider card with supporting text below as a natural
-                                lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="text-white"> limited space acceess</p>
-                            <p class="text-white"> limited space acceess</p>
-                            <p class="text-white"> limited space acceess</p>
-                            <p class="text-white"> limited space acceess</p>
-                            <p class="text-white"> limited space acceess</p>
+                            <h2 class="text-white fw-bold" style=" font-family:initial;"> $800</h2>
+                            <h5 class="card-title text-white fw-bold">Wedding plus</h5>
+                            <p class="card-text text-white">For most weddings with premium plans</p>
+                            <p class="text-white"> <i style="color: #efeff0;" class="fas fa-check-circle "></i>Full
+                                space
+                                access</p>
+                            <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Dedicated
+                                team</p>
+                            <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Buffet
+                                food</p>
+                            <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Premium
+                                Decoration</p>
+                            <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Pay as
+                                plan</p>
                         </div>
                         <div class="d-flex justify-content-center align-items-center text-white ">
-                            <button class="px-4 py-2 rounded-pill" type="">
+                            <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
                                 Choose plan
                             </button>
                         </div>
                     </div>
                 </div>
                 <div class="col  " style="margin-top: 60px; height: 500px; ">
-                    <div class="card h-100 border-0 ">
+                    <div class="card  border-0 ">
                         <div class="card-body">
-                            <h2> $300</h2>
-                            <h5 class="card-title">Business fair</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
-                            <p> limited space acceess</p>
+                            <h2 class="fw-bold" style=" font-family:initial;"> $1200</h2>
+                            <h5 class="card-title fw-bold">Corporate event</h5>
+                            <p class="card-text">For most corporate business events</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Full space access</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Dedicated team</p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Buffet food </p>
+                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> premium decoration</p>
+                            <p> <i style="color: #9098a0;" class="fas fa-check-circle"></i>Pay as plan</p>
                         </div>
                         <div class="d-flex justify-content-center align-items-center ">
-                            <button class="px-4 py-2 rounded-pill" type="">
+                            <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
                                 Choose plan
                             </button>
                         </div>
