added footer area

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body style="font-family: 'Merriweather', serif;">
     <!-- header start -->
-    <header class="container">
+    <header class="container ">
         <h4 class="mt-3 ms-5">
             Historical Convention Center
         </h4>
@@ -86,111 +86,185 @@
         </div>
     </header>
     <!-- main start -->
-    <main class="container mx-auto  ">
-        <div class="my-5 d-flex justify-content-center ">
-            <h1>Our package</h1>
+    <main class="container mx-auto position-static  ">
+        <!-- our package section start -->
+        <section class="container mx-auto   ">
+            <div class="my-5 d-flex justify-content-center ">
+                <h1>Our package</h1>
+            </div>
+            <div>
+                <div class="row row-cols-1 row-cols-md-4 g-3 mb-5 ">
+                    <div class="col " style="margin-top: 60px; height: 500px;">
+                        <div class="card  border-0">
+                            <div class="card-body">
+                                <h2 class="fw-bold" style=" font-family:initial;"> $300</h2>
+                                <h5 class="card-title fw-bold">Business fair</h5>
+                                <p class="card-text"> For most businesses event like book fair. craft fair.</p>
+                                <p> <i style="color: #9098a0;" class="fas fa-check-circle"></i> limited space
+                                    acceess</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Secuirty facility</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> event support</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Decoration design</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Per day bill</p>
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center  ">
+                                <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
+                                    Choose plan
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col " style="margin-top: 60px; height: 500px;">
+                        <div class="card  border-0">
+                            <div class="card-body">
+                                <h2 class="fw-bold" style=" font-family:initial;"> $500</h2>
+                                <h5 class="card-title fw-bold">Wedding basic</h5>
+                                <p class="card-text">For weddings with basic plan and limited item</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Full space access </p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Food arrangement</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Mangement support </p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i>Decoration design </p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Billed ad shift</p>
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center  ">
+                                <button class="px-4 py-2 rounded-pill border-0  text-primary" type="">
+                                    Choose plan
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col   " style=" height: 500px;">
+
+                        <div class="card  border-0 bg-primary pb-5   "
+                            style="border-radius: 15px; height: 470px;box-shadow:0px 34px 22px 5px rgba(153, 189, 230, 0.938) ">
+
+                            <span class=" top-0  translate-middle badge rounded-pill bg-secondary bg-danger"
+                                style="margin-left: 80%;">Hot
+                            </span>
+
+
+
+                            <div class="card-body">
+                                <h2 class="text-white fw-bold" style=" font-family:initial;"> $800</h2>
+                                <h5 class="card-title text-white fw-bold">Wedding plus</h5>
+                                <p class="card-text text-white">For most weddings with premium plans</p>
+                                <p class="text-white"> <i style="color: #efeff0;" class="fas fa-check-circle "></i>Full
+                                    space
+                                    access</p>
+                                <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i>
+                                    Dedicated
+                                    team</p>
+                                <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Buffet
+                                    food</p>
+                                <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i>
+                                    Premium
+                                    Decoration</p>
+                                <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Pay as
+                                    plan</p>
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center text-white ">
+                                <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
+                                    Choose plan
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col  " style="margin-top: 60px; height: 500px; ">
+                        <div class="card  border-0 ">
+                            <div class="card-body">
+                                <h2 class="fw-bold" style=" font-family:initial;"> $1200</h2>
+                                <h5 class="card-title fw-bold">Corporate event</h5>
+                                <p class="card-text">For most corporate business events</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Full space access</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Dedicated team</p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Buffet food </p>
+                                <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> premium decoration</p>
+                                <p> <i style="color: #9098a0;" class="fas fa-check-circle"></i>Pay as plan</p>
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center ">
+                                <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
+                                    Choose plan
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- our package section end  -->
+        <section class="    d-sm-flex mb-5  ">
+            <div class=" col-sm-6 col-12 ">
+                <div class="accordion accordion-flush  m-1   border border-2 m-2 rounded-3 " id="accordionFlushExaml">
+                    <div class="accordion-item col ">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOn" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                What is difference between conference and convention?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOn" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExaml">
+                            <div class="accordion-body">Convention and Conference are two words that are often confused
+                                when
+                                it
+                                comes to their meanings and connotations.</div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="accordion accordion-flush   border border-2 m-2 rounded-3 " id="accordionFlushExampe">
+                    <div class="accordion-item col ">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOe" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                What are the three types of convention?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOe" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExampe">
+                            <div class="accordion-body">Different types of conventions include form conventions, story
+                                conventions and genre conventions.</div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="accordion accordion-flush   border border-2 m-2 rounded-3 " id="accordionFlushExampl">
+                    <div class="accordion-item col ">
+                        <h2 class="accordion-header" id="flush-headingne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                aria-controls="flush-collapseOne">
+                                What does Convention Center mean?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                            aria-labelledby="flush-headingne" data-bs-parent="#accordionFlushExampl">
+                            <div class="accordion-body">a building or set of buildings designed to hold many people and
+                                used
+                                for
+                                meetings The conference was held at the new convention center.</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class=" col-sm-6  col-12 m-1">
+                <img class="w-100 h-100" src="images/people.png" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <p><i class="far fa-copyright"></i>2020 bike. All rights reserved</p>
         </div>
         <div>
-            <div class="row row-cols-1 row-cols-md-4 g-3 mb-5 " style="height: 600px;">
-                <div class="col " style="margin-top: 60px; height: 500px;">
-                    <div class="card  border-0">
-                        <div class="card-body">
-                            <h2 class="fw-bold" style=" font-family:initial;"> $300</h2>
-                            <h5 class="card-title fw-bold">Business fair</h5>
-                            <p class="card-text"> For most businesses event like book fair. craft fair.</p>
-                            <p> <i style="color: #9098a0;" class="fas fa-check-circle"></i> limited space
-                                acceess</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Secuirty facility</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> event support</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Decoration design</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Per day bill</p>
-                        </div>
-                        <div class="d-flex justify-content-center align-items-center  ">
-                            <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
-                                Choose plan
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col " style="margin-top: 60px; height: 500px;">
-                    <div class="card  border-0">
-                        <div class="card-body">
-                            <h2 class="fw-bold" style=" font-family:initial;"> $500</h2>
-                            <h5 class="card-title fw-bold">Wedding basic</h5>
-                            <p class="card-text">For weddings with basic plan and limited item</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Full space access </p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Food arrangement</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Mangement support </p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i>Decoration design </p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Billed ad shift</p>
-                        </div>
-                        <div class="d-flex justify-content-center align-items-center  ">
-                            <button class="px-4 py-2 rounded-pill border-0  text-primary" type="">
-                                Choose plan
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col position-relative  " style=" height: 500px;">
-
-                    <div class="card  border-0 bg-primary pb-5   "
-                        style="border-radius: 15px; height: 470px;box-shadow:0px 34px 22px 5px rgba(153, 189, 230, 0.938) ">
-
-                        <span
-                            class="position-absolute top-0  translate-middle badge rounded-pill bg-secondary bg-danger"
-                            style="margin-left: 80%;">Hot
-                        </span>
-
-
-
-                        <div class="card-body">
-                            <h2 class="text-white fw-bold" style=" font-family:initial;"> $800</h2>
-                            <h5 class="card-title text-white fw-bold">Wedding plus</h5>
-                            <p class="card-text text-white">For most weddings with premium plans</p>
-                            <p class="text-white"> <i style="color: #efeff0;" class="fas fa-check-circle "></i>Full
-                                space
-                                access</p>
-                            <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Dedicated
-                                team</p>
-                            <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Buffet
-                                food</p>
-                            <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Premium
-                                Decoration</p>
-                            <p class="text-white"><i style="color: #efeff0;" class="fas fa-check-circle"></i> Pay as
-                                plan</p>
-                        </div>
-                        <div class="d-flex justify-content-center align-items-center text-white ">
-                            <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
-                                Choose plan
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col  " style="margin-top: 60px; height: 500px; ">
-                    <div class="card  border-0 ">
-                        <div class="card-body">
-                            <h2 class="fw-bold" style=" font-family:initial;"> $1200</h2>
-                            <h5 class="card-title fw-bold">Corporate event</h5>
-                            <p class="card-text">For most corporate business events</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Full space access</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Dedicated team</p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> Buffet food </p>
-                            <p><i style="color: #9098a0;" class="fas fa-check-circle"></i> premium decoration</p>
-                            <p> <i style="color: #9098a0;" class="fas fa-check-circle"></i>Pay as plan</p>
-                        </div>
-                        <div class="d-flex justify-content-center align-items-center ">
-                            <button class="px-4 py-2 rounded-pill border-0 text-primary" type="">
-                                Choose plan
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-
-
-            </div>
+            <p>Get the App</p>
         </div>
-    </main>
+    </footer>
+
+
 
 
 
