added complet footer

--- a/index.html
+++ b/index.html
@@ -192,7 +192,16 @@
             </div>
         </section>
         <!-- our package section end  -->
-        <section class="    d-sm-flex mb-5  ">
+
+        <section class="container mx-auto   ">
+            <div class="my-5 d-flex justify-content-center ">
+                <div>
+                    <h2> Frequently Asked Questions</h2>
+                </div>
+            </div>
+        </section>
+        <div class="d-sm-flex mb-5  ">
+
             <div class=" col-sm-6 col-12 ">
                 <div class="accordion accordion-flush  m-1   border border-2 m-2 rounded-3 " id="accordionFlushExaml">
                     <div class="accordion-item col ">
@@ -253,14 +262,26 @@
             <div class=" col-sm-6  col-12 m-1">
                 <img class="w-100 h-100" src="images/people.png" alt="">
             </div>
-        </section>
-    </main>
-    <footer>
-        <div>
-            <p><i class="far fa-copyright"></i>2020 bike. All rights reserved</p>
         </div>
+    </main>
+    <footer class="bg-dark d-flex justify-content-between align-items-center">
         <div>
-            <p>Get the App</p>
+            <p class="text-light"><i class="far fa-copyright text-light"></i>2020 bike. All rights reserved</p>
+        </div>
+        <div class="">
+            <p class="text-light  mt-4">Get the App</p>
+            <div class="container" style="width: 30px; margin-right: 90px;">
+                <div class="row row-cols-2 ">
+                    <a class=" col m-1" href="https://play.google.com/store/apps/details?id=com.banglamatrimony"
+                        target="_block">
+                        <img src="icons/goole play.png" style="width: 80px; height: 40px;" alt="">
+                    </a>
+                    <a class=" col m-1" href="https://play.google.com/store/apps/details?id=com.banglamatrimony"
+                        target="_block">
+                        <img src="icons/app store.png" style="width: 80px; height: 40px;" alt="">
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
 
