added atlest commit

--- a/index.html
+++ b/index.html
@@ -192,77 +192,135 @@
             </div>
         </section>
         <!-- our package section end  -->
-
+        <!-- ----------------------- -->
+        <!-- Frequently Asked Questions start -->
         <section class="container mx-auto   ">
             <div class="my-5 d-flex justify-content-center ">
                 <div>
                     <h2> Frequently Asked Questions</h2>
                 </div>
             </div>
+            <div class="d-sm-flex mb-5  ">
+
+                <div class=" col-sm-6 col-12 ">
+                    <div class="accordion accordion-flush  m-1   border border-2 m-2 rounded-3 "
+                        id="accordionFlushExaml">
+                        <div class="accordion-item col ">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOn" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    What is difference between conference and convention?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOn" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExaml">
+                                <div class="accordion-body">Convention and Conference are two words that are often
+                                    confused
+                                    when
+                                    it
+                                    comes to their meanings and connotations.</div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="accordion accordion-flush   border border-2 m-2 rounded-3 " id="accordionFlushExampe">
+                        <div class="accordion-item col ">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOe" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    What are the three types of convention?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOe" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExampe">
+                                <div class="accordion-body">Different types of conventions include form conventions,
+                                    story
+                                    conventions and genre conventions.</div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="accordion accordion-flush   border border-2 m-2 rounded-3 " id="accordionFlushExampl">
+                        <div class="accordion-item col ">
+                            <h2 class="accordion-header" id="flush-headingne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    What does Convention Center mean?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingne" data-bs-parent="#accordionFlushExampl">
+                                <div class="accordion-body">a building or set of buildings designed to hold many people
+                                    and
+                                    used
+                                    for
+                                    meetings The conference was held at the new convention center.</div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class=" col-sm-6  col-12 m-1">
+                    <img class="w-100 h-100" src="images/people.png" alt="">
+                </div>
+            </div>
         </section>
-        <div class="d-sm-flex mb-5  ">
-
-            <div class=" col-sm-6 col-12 ">
-                <div class="accordion accordion-flush  m-1   border border-2 m-2 rounded-3 " id="accordionFlushExaml">
-                    <div class="accordion-item col ">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOn" aria-expanded="false"
-                                aria-controls="flush-collapseOne">
-                                What is difference between conference and convention?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOn" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExaml">
-                            <div class="accordion-body">Convention and Conference are two words that are often confused
-                                when
-                                it
-                                comes to their meanings and connotations.</div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="accordion accordion-flush   border border-2 m-2 rounded-3 " id="accordionFlushExampe">
-                    <div class="accordion-item col ">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOe" aria-expanded="false"
-                                aria-controls="flush-collapseOne">
-                                What are the three types of convention?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOe" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExampe">
-                            <div class="accordion-body">Different types of conventions include form conventions, story
-                                conventions and genre conventions.</div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="accordion accordion-flush   border border-2 m-2 rounded-3 " id="accordionFlushExampl">
-                    <div class="accordion-item col ">
-                        <h2 class="accordion-header" id="flush-headingne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                aria-controls="flush-collapseOne">
-                                What does Convention Center mean?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingne" data-bs-parent="#accordionFlushExampl">
-                            <div class="accordion-body">a building or set of buildings designed to hold many people and
-                                used
-                                for
-                                meetings The conference was held at the new convention center.</div>
-                        </div>
-                    </div>
-
-                </div>
+        <!-- Frequently Asked Questions end -->
+        <!-- ------------------------------ -->
+        <!-- Members Who Have Found Love -->
+        <section class="contianer wx-auto bg-light my-5">
+            <div class=" my-5 d-flex justify-content-center ">
+                <h2>Members Who Have Found Love</h2>
             </div>
-            <div class=" col-sm-6  col-12 m-1">
-                <img class="w-100 h-100" src="images/people.png" alt="">
-            </div>
-        </div>
+            <div class=" col-sm-6 col-12 d-sm-flex  ">
+                <div class=" justify-content-center align-text-center text-center  m-2">
+                    <a href="https://www.muslima.com/en/general/success" target="_block"><img class="rounded-circle"
+                            src="images/img1.JPG" alt=""></a>
+                    <a style="text-decoration: none;" href="https://www.muslima.com/en/general/success" target="_block">
+                        <p class="text-black-50">"I thank everybody who is in charge"</p>
+                    </a>
+                    <a style="text-decoration: none;" href="https://www.muslima.com/en/general/success" target="_block">
+                        <p class="text-black-50">maisa</p>
+                    </a>
+                </div>
+                <div class=" justify-content-center align-text-center text-center  m-2">
+                    <a href="https://www.muslima.com/en/general/success" target="_block"><img class="rounded-circle"
+                            src="images/img2.jpg" alt=""></a>
+                    <a style="text-decoration: none;" href="https://www.muslima.com/en/general/success" target="_block">
+                        <p class="text-black-50">""Found the love of my life"</p>
+                    </a>
+                    <a style="text-decoration: none;" href="https://www.muslima.com/en/general/success" target="_block">
+                        <p class="text-black-50">Annie</p>
+                    </a>
+                </div>
+                <div class=" justify-content-center align-text-center text-center  m-2">
+                    <a href="https://www.muslima.com/en/general/success" target="_block"><img class="rounded-circle"
+                            src="images/img3.jpg" alt=""></a>
+                    <a style="text-decoration: none;" href="https://www.muslima.com/en/general/success" target="_block">
+                        <p class="text-black-50">"I've even recommended it to my brother"</p>
+                    </a>
+                    <a style="text-decoration: none;" href="https://www.muslima.com/en/general/success" target="_block">
+                        <p class="text-black-50">Laila</p>
+                    </a>
+                </div>
+                <div class=" justify-content-center align-text-center text-center  m-2">
+                    <a href="https://www.muslima.com/en/general/success" target="_block"><img class="rounded-circle"
+                            src="images/img4.jpg" alt=""></a>
+                    <a style="text-decoration: none;" href="https://www.muslima.com/en/general/success" target="_block">
+                        <p class="text-black-50">"Thanks to Muslima I have found my true love"</p>
+                    </a>
+                    <a style="text-decoration: none;" href="https://www.muslima.com/en/general/success" target="_block">
+                        <p class="text-black-50">Hamdi</p>
+                    </a>
+                </div>
+
+
+        </section>
+
+
     </main>
     <footer class="bg-dark d-flex justify-content-between align-items-center">
         <div>
