--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
     </header>
     <!-- main start -->
     <main class="container mx-auto position-static  ">
+        <!-- Toasts are as flexible -->
+        <section class="position-relative">
+            <div class="alert alert-warning alert-dismissible fade show d-flex justify-content-center align-items-center w-50 bg-white border border-start-4 position-absolute start-50 top-50 "
+                role="alert">
+                <img class="" src="icons/Vector.svg" alt="">
+                <p class="mt-3 ms-1"> 20% off on next booking</p>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        </section>
         <!-- our package section start -->
         <section class="container mx-auto   ">
             <div class="my-5 d-flex justify-content-center ">
